[package]
name = "kick-api"
version = "0.1.2"
edition = "2024"
description = "Rust client for the Kick.com API"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Landy-Dev/kick-api"
keywords = ["kick", "api", "streaming"]
categories = ["api-bindings"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
oauth2 = "4.4"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"

[dev-dependencies]
dotenvy = "0.15.7"
tracing = "0.1"
tracing-subscriber = "0.3"
warp = "0.3"
tokio = { version = "1", features = ["full"] }
